Updating some colors

--- a/about.html
+++ b/about.html
@@ -25,7 +25,7 @@
         <button id="menuBtn" class="menu-btn"><i class="fa fa-bars"></i></button>
     </header>
     <main id="main">
-                <h1 class="currentPage">About Me</h1>
+                <h1>About Me</h1>
                 <p>I'm Ayomide Olaleye, a passionate frontend web developer with one year of professional experience. I specialize in creating visually appealing and user-friendly websites that deliver an exceptional user experience.
 
 With a strong foundation in HTML, CSS, and JavaScript, I bring life to designs by transforming them into interactive and responsive web applications. I have a keen eye for detail and strive to craft pixel-perfect interfaces that not only look great but also function seamlessly across different devices and browsers.
