--- a/index.html
+++ b/index.html
@@ -27,11 +27,12 @@
     <main id="main">
         <div class="main">
             <div>
-                <img src="image.jpg" class="img"></div>
+                <img src="image.jpg" class="img">
+            </div>
             <div class="about">
                 <h4>Hello, It's Me</h4>
                 <h1>Ayomide Olaleye</h1>
-                <h4>And I'm a <span class="currentPage">Frontend Web Developer</span></h4>
+                <h4>And I'm a <span>Frontend Web Developer</span></h4>
                 <p>Welcome to my portfolio website, I will help you enhance your online experience and also make your brand stand out on the internet with my services ranging from web development to graphic design and content writing feel free to contact me with the links provided below thanks 🥰🥰
                 </p>
                 <div class="icon-container">
